# SpartanGPT

./: .env.example  .gitignore  .pyre_configuration  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt
docker/: Dockerfile  docker-compose.yml
frontend/: index.html
scripts/: start_server.sh  verify_api.py
src/gatorgpt/: __init__.py
src/gatorgpt/api/: __init__.py  models.py  server.py
src/gatorgpt/inference/: __init__.py  generator.py
src/gatorgpt/model/: __init__.py  architecture.py  config.py  utils.py
src/gatorgpt/training/: __init__.py  config.py  dataset.py
tests/: conftest.py  test_api.py  test_config.py  test_dataset.py  test_generator.py  test_model.py
